cambios de mauri mergeados, agregue mas links en los paneles de admin, carrusel para actores pero me parece q no esta funcionando del todo, adapte interfaces y servicios

--- a/Tp-Final-labo4/src/app/Components/admin-panel/admin-panel.html
+++ b/Tp-Final-labo4/src/app/Components/admin-panel/admin-panel.html
@@ -24,7 +24,8 @@
       <tr>
         <td>{{ user.id }}</td>
         <td>
-  <a [routerLink]="['/profile', user.id]" class="user-link">
+  <a [routerLink]="['/profiles', user.id]" class="user-link">
+
     {{ user.username }}
   </a>
 </td>
