--- a/Tp-Final-labo4/src/app/Components/profile-public/profile-public.html
+++ b/Tp-Final-labo4/src/app/Components/profile-public/profile-public.html
@@ -50,7 +50,7 @@
     <!-- SOLO ESTA CAJITA DE SEGUIDORES -->
     <section class="followers-card">
       <h3 class="section-title">Seguidores / Seguidos</h3>
-      <app-follow-component [userId]="profile.id!" [showProfileButton]="true">
+      <app-follow-component [userId]="profile.id!" [showdeletebutton]="false">
       </app-follow-component>
     </section>
 
