ocultar pelis en admin + filtrar populares y refrescar listas y cambie el bienvenida por bienvenid@

--- a/Tp-Final-labo4/src/app/Components/home/home.html
+++ b/Tp-Final-labo4/src/app/Components/home/home.html
@@ -3,7 +3,7 @@
 <div class="home-container">
   <section class="welcome-section">
     @if (activeUserSignal()) {
-      <h1>¡Bienvenida, {{ activeUserSignal()?.firstName || activeUserSignal()?.username }}! 🍿</h1>
+      <h1>¡Bienvenid@, {{ activeUserSignal()?.firstName || activeUserSignal()?.username }}! 🍿</h1>
       <p class="subtitle">
         Elegí una peli, dejá tu reseña y descubrí nuevas recomendaciones.
       </p>
