componente propio de alert

--- a/Tp-Final-labo4/src/app/Components/admin-create-admin/admin-create-admin.html
+++ b/Tp-Final-labo4/src/app/Components/admin-create-admin/admin-create-admin.html
@@ -60,3 +60,12 @@
   </section>
 
 </main>
+
+<app-confim-dialog
+  #confirmDialog
+  [title]="dialogTitle"
+  [description]="dialogDescription"
+  confirmText="OK"
+  [cancelText]="null"
+></app-confim-dialog>
+
