--- a/Tp-Final-labo4/src/app/Components/admin-reviews/admin-reviews.html
+++ b/Tp-Final-labo4/src/app/Components/admin-reviews/admin-reviews.html
@@ -81,3 +81,11 @@
   </section>
 
 </div>
+<app-confim-dialog
+  #confirmDialog
+  [title]="dialogTitle"
+  [description]="dialogDescription"
+  confirmText="Sí"
+  cancelText="No"
+  (onConfirm)="executePendingAction()"
+></app-confim-dialog>
